remake-documents-rates
Sửa database Documents, Rates

--- a/ELibrary_Team 1/appsettings.json
+++ b/ELibrary_Team 1/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ElibraryDb": "Server=.\\SQLExpress;Database=ELibrary;Trusted_Connection=True;"
+    "ElibraryDb": "Server=DESKTOP-5I1DHH2\\TUANLTT;Database=ELibrary;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
