Link-to-Razorpage

--- a/ELibrary_Team 1/appsettings.json
+++ b/ELibrary_Team 1/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ElibraryDb": "Server=DESKTOP-5I1DHH2\\TUANLTT;Database=ELibrary;Trusted_Connection=True;"
+    "ElibraryDb": "Server=DESKTOP-5I1DHH2\\TUANLTT;Database=ELibrary;Trusted_Connection=True;",
+    "ELibrary_Team_1ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ELibrary_Team 1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
