--- a/ELibrary_Team 1/ELibrary_Team 1.csproj
+++ b/ELibrary_Team 1/ELibrary_Team 1.csproj
@@ -23,4 +23,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ELibrary_Team1.DataAccess\ELibrary_Team1.DataAccess.csproj" />
+    <ProjectReference Include="..\ELibrary_Team1.Models\ELibrary_Team1.Models.csproj" />
+  </ItemGroup>
+
 </Project>
