--- a/ELibrary_Team 1/ELibrary_Team 1.csproj
+++ b/ELibrary_Team 1/ELibrary_Team 1.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\ELibrary_Team1.Models\ELibrary_Team1.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
