--- a/ELibrary_Team 1/appsettings.json
+++ b/ELibrary_Team 1/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ElibraryDb": "Server=localhost;Database=ELibrary;Trusted_Connection=True;",
-    "ELibrary_Team_1ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ELibrary_Team 1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ElibraryDb": "server=localhost;Database=ELibrary;Trusted_Connection=True;"
+
   },
   "Logging": {
     "LogLevel": {
