--- a/ELibrary_Team 1/ELibrary_Team 1.csproj
+++ b/ELibrary_Team 1/ELibrary_Team 1.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Document\" />
+    <Folder Include="wwwroot\css\Admin\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
