--- a/ELibrary_Team 1/Properties/launchSettings.json
+++ b/ELibrary_Team 1/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:4254",
-      "sslPort": 44304
+      "applicationUrl": "http://localhost:64726/",
+      "sslPort": 44330
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "ELibrary_Team_1": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
