--- a/ELibrary_Team 1/appsettings.json
+++ b/ELibrary_Team 1/appsettings.json
@@ -1,14 +1,14 @@
 {
   "ConnectionStrings": {
-    "ElibraryDb": "Server=localhost;Database=ELibrary;Trusted_Connection=True;",
+    "ElibraryDb": "Server=localhost;Database=ELibrary;Trusted_Connection=True;MultipleActiveResultSets=true",
     "ELibrary_Team_1ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ELibrary_Team 1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
 }
