--- a/ELibrary/ELibrary.csproj
+++ b/ELibrary/ELibrary.csproj
@@ -35,7 +35,7 @@
     <Folder Include="Views\Document\" />
     <Folder Include="Views\Home\" />
     <Folder Include="wwwroot\css\Admin\" />
-    <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
